<resources>
    <string name="app_name">AndroKado</string>
    <string name="bought_tb_off">À acheter</string>
    <string name="bought_tb_on">Acheté</string>
    <string name="todo">\@TODO</string>
    <string name="placeholder">[PLACEHOLDER]</string>
    <string name="edit_fr">Modifier</string>
    <string name="send_fr">Envoyer</string>
    <string name="add_fr">Ajouter</string>
    <string name="configuration">Configuration</string>
    <string name="sort_price_fr">Tri par prix</string>
    <string name="default_price_fr">Prix par défaut</string>
    <string name="name_fr">Nom</string>
    <string name="description">Description</string>
    <string name="price_fr">Prix</string>
    <string name="url">URL</string>
    <string name="save_fr">Sauvegarder</string>
    <string name="display_list_fr">Afficher la liste</string>
</resources>